[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-bus"
version = "0.5.0"
description = "Simple inter-agent communication shell bus utilities"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
